--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -122,17 +122,6 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JRE50C2H7Q');
-</script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -200,7 +189,7 @@
         </div>
       </div></header>
     <section class="u-clearfix u-image u-shading u-section-1" id="sec-2c09" data-image-width="1280" data-image-height="855">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
         <h2 class="u-align-center u-text u-text-default u-text-1"> Installers of High Security and Energy Efficient Windows, Doors &amp; Living Spaces<br>
         </h2><span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/3179068-cd7b04a1.png" alt=""></span>
         <h2 class="u-align-center u-text u-text-default u-text-2">South Wales</h2>
@@ -215,7 +204,7 @@ to combining Value For Money with a First Class experience for all our customer.
         </div>
         <div class="u-container-style u-custom-color-6 u-expanded-width u-group u-opacity u-opacity-20 u-group-2">
           <div class="u-container-layout u-container-layout-2">
-            <h2 class="infinite u-align-center-xs u-text u-text-default u-text-4" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Free Ring Doorbell worht £120<span style="font-size: 1.125rem;">*</span>
+            <h2 class="infinite u-align-center-xs u-text u-text-default u-text-4" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Free Ring Doorbell worth £120<span style="font-size: 1.125rem;">*</span>
             </h2>
             <img class="u-image u-image-contain u-image-default u-image-1" src="images/CompositeDoors.png" alt="" data-image-width="1948" data-image-height="1115">
             <p class="u-align-center-sm u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-5" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">With Every Composite Door purchased in February and March 2024</p>
