--- a/Brochure.html
+++ b/Brochure.html
@@ -27,16 +27,27 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRE50C2H7Q');
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
             <a href="EcoShield-Windows.html" class="u-image u-logo u-image-1" data-image-width="842" data-image-height="595" title="Home">
               <img src="images/Ecoshield-LogoFinal.png" class="u-logo-image u-logo-image-1">
             </a>
-            <a href="tel:0800 433 22 93" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">
+            <a href="tel:0800 433 22 93" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-1" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
               <span style="font-size: 1rem;">Call Free:</span> 0800 433 22 93
             </a>
-            <a href="tel:0800 433 22 93" class="u-border-none u-btn u-button-style u-custom-color-6 u-hidden-sm u-hidden-xs u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-2">
+            <a href="mailto:info@ecoshieldwindows.co.uk?subject=Free%20Quotation" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hidden-sm u-hidden-xs u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-2" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
               <span style="font-size: 16px;">Free Quote - Get in touch</span>
             </a>
           </div>
@@ -96,17 +107,17 @@
     <section class="u-align-center u-clearfix u-section-1" id="sec-e3a4">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-align-center u-text u-text-default u-text-1">EcoShield Brochures</h2>
-        <p class="u-align-center u-text u-text-2">Our product catalogs are fully downloadable for you to enjoy at a time which is convieniant for you.&nbsp;<br>
+        <p class="u-align-center u-custom-font u-font-ubuntu u-text u-text-2">Our product catalogs are fully downloadable for you to enjoy at a time which is convieniant for you.&nbsp;<br>
           <br>Please click the cover of the brochure you require for your download to begin.
         </p>
         <div class="u-expanded-width u-gallery u-layout-horizontal u-lightbox u-show-text-always u-gallery-1" id="carousel-703a">
-          <div class="u-gallery-inner u-gallery-inner-1" role="listbox"><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-1" data-href="https://drive.google.com/file/d/16IXcGgLWTdTD8SNO1J05FoYMH7uRYPlE/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="588" data-image-height="837"><img class="u-back-image" src="images/CompDoor.png" alt="Composite Doors">
+          <div class="u-gallery-inner u-gallery-inner-1" role="listbox"><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-1" data-href="https://drive.google.com/file/d/1VnEj03n1OpHFuyT_leugj5UiuGAOBE_0/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="588" data-image-height="837"><img class="u-back-image" src="images/CompDoor.png" alt="Composite Doors">
 </div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-1"><h3 class="u-align-center u-gallery-heading" style="">Composite Doors</h3>
 </div>
 </div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-2" data-image-width="601" data-image-height="850" data-href="https://drive.google.com/file/d/1kHq_3GVxUSGJE0XV4W-U0tnGakbXo_mc/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="577" data-image-height="806"><img class="u-back-image" src="images/Homelife2.png" alt="Windows, Doors &amp;amp; Conservatories">
 </div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-2"><h3 class="u-align-center u-gallery-heading" style="">Windows, Doors &amp; Conservatories</h3>
 </div>
-</div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-3" data-image-width="599" data-image-height="856" data-href="https://drive.google.com/file/d/1Y_JGpYqEUYvL12q9wJ17FAeBIvfQ2v2r/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="601" data-image-height="850"><img class="u-back-image" src="images/Panel.png" alt="PVC Door Panels">
+</div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-3" data-image-width="599" data-image-height="856" data-href="https://drive.google.com/file/d/1H2fwvN_xev1sxdpre_36mFbrE0OxMWf1/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="601" data-image-height="850"><img class="u-back-image" src="images/Panel.png" alt="PVC Door Panels">
 </div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-3"><h3 class="u-align-center u-gallery-heading" style="">PVC Door Panels</h3>
 </div>
 </div></div>
