--- a/About-Us.html
+++ b/About-Us.html
@@ -27,16 +27,27 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRE50C2H7Q');
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
             <a href="EcoShield-Windows.html" class="u-image u-logo u-image-1" data-image-width="842" data-image-height="595" title="Home">
               <img src="images/Ecoshield-LogoFinal.png" class="u-logo-image u-logo-image-1">
             </a>
-            <a href="tel:0800 433 22 93" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">
+            <a href="tel:0800 433 22 93" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-1" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
               <span style="font-size: 1rem;">Call Free:</span> 0800 433 22 93
             </a>
-            <a href="tel:0800 433 22 93" class="u-border-none u-btn u-button-style u-custom-color-6 u-hidden-sm u-hidden-xs u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-2">
+            <a href="mailto:info@ecoshieldwindows.co.uk?subject=Free%20Quotation" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hidden-sm u-hidden-xs u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-2" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
               <span style="font-size: 16px;">Free Quote - Get in touch</span>
             </a>
           </div>
