--- a/index.html
+++ b/index.html
@@ -124,16 +124,27 @@
         });
     </script>
 <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRE50C2H7Q');
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
             <a href="EcoShield-Windows.html" class="u-image u-logo u-image-1" data-image-width="842" data-image-height="595" title="Home">
               <img src="images/Ecoshield-LogoFinal.png" class="u-logo-image u-logo-image-1">
             </a>
-            <a href="tel:0800 433 22 93" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">
+            <a href="tel:0800 433 22 93" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-1" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
               <span style="font-size: 1rem;">Call Free:</span> 0800 433 22 93
             </a>
-            <a href="tel:0800 433 22 93" class="u-border-none u-btn u-button-style u-custom-color-6 u-hidden-sm u-hidden-xs u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-2">
+            <a href="mailto:info@ecoshieldwindows.co.uk?subject=Free%20Quotation" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hidden-sm u-hidden-xs u-hover-palette-4-base u-radius u-text-body-alt-color u-btn-2" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
               <span style="font-size: 16px;">Free Quote - Get in touch</span>
             </a>
           </div>
@@ -200,17 +211,17 @@
             <p class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-3">
               <span style="font-style: italic;">Using our 25 years’ experience working with windows and doors,
 and by setting the highest standards of quality for our products and services, EcoShield Windows is committed
-to combining Value For Money with a First Class experience for all our customer.</span>
+to combining Value for Money with a First-Class experience for all our customer.</span>
             </p>
           </div>
         </div>
         <div class="u-container-style u-custom-color-6 u-expanded-width u-group u-opacity u-opacity-20 u-group-2">
           <div class="u-container-layout u-container-layout-2">
-            <h2 class="infinite u-align-center-xs u-text u-text-default u-text-4" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Free Ring Doorbell worth £120<span style="font-size: 1.125rem;">*</span>
+            <h2 class="infinite u-align-center-xs u-text u-text-default u-text-4" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">Free Ring Doorbell worth £120<span style="font-size: 1.125rem;">*</span>
             </h2>
             <img class="u-image u-image-contain u-image-default u-image-1" src="images/CompositeDoors.png" alt="" data-image-width="1948" data-image-height="1115">
             <p class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-5" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">With Every Composite Door purchased in February and March 2024</p>
-            <img class="infinite u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/rvdgen2_vb_2000x2000.webp" alt="" data-image-width="250" data-image-height="250" data-animation-name="pulse" data-animation-duration="1250" data-animation-direction="">
+            <img class="infinite u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/rvdgen2_vb_2000x2000.webp" alt="" data-image-width="250" data-image-height="250" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
           </div>
         </div>
       </div>
@@ -220,14 +231,14 @@ to combining Value For Money with a First Class experience for all our customer.
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">EcoShield Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel_ec44" data-interval="5000" data-u-ride="carousel">
+    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-8c6b" data-interval="5000" data-u-ride="carousel">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-3bc6-2">
-        <li data-u-target="#carousel_ec44" class="u-active u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel_ec44" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel_ec44" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel_ec44" class="u-grey-30" data-u-slide-to="3"></li>
-        <li data-u-target="#carousel_ec44" class="u-grey-30" data-u-slide-to="4"></li>
-        <li data-u-target="#carousel_ec44" class="u-grey-30" data-u-slide-to="5"></li>
+        <li data-u-target="#carousel-8c6b" class="u-active u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="4"></li>
+        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="5"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-section-3-1" src="">
@@ -256,10 +267,10 @@ degrees of ventilation.&nbsp;</span>
           <div class="u-clearfix u-sheet u-sheet-1">
             <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/FlushSash600x600.jpg" alt="" data-image-width="600" data-image-height="600">
             <h2 class="u-align-left u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
-              <span style="font-size: 1.5rem;">Flush
-Windows</span>
-              <span style="font-weight: 700;">
-                <br>
+              <span style="font-size: 2.25rem;">Flush
+Windows<span style="font-weight: 700;">
+                  <br>
+                </span>
               </span>
               <br>
               <span style="font-size: 1.25rem;">Versatile style teamed with innovative performance. </span>
@@ -282,8 +293,9 @@ making it the most flexible window on the market.</span>
           <div class="u-clearfix u-sheet u-sheet-1">
             <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/SlidingSashMain600x450.jpg" alt="" data-image-width="600" data-image-height="450">
             <h2 class="u-align-left u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
-              <span style="font-size: 1.5rem;"></span>
-              <span style="font-weight: 700;">Sliding Sash Windows&nbsp;<br>
+              <span style="font-weight: 700; font-size: 2.25rem;">
+                <span style="font-weight: 400;">Sliding Sash Windows&nbsp;</span>
+                <br>
               </span>
               <br>
               <span style="font-size: 1.25rem;">Modern design with traditional architectural character.&nbsp;</span>
@@ -314,8 +326,8 @@ Modern design with traditional architectural character.</span>
           <div class="u-clearfix u-sheet u-sheet-1">
             <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/EntranceDoor600x450.jpg" alt="" data-image-width="600" data-image-height="450">
             <h2 class="u-align-left u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
-              <span style="font-size: 1.5rem;"></span>
-              <span style="font-weight: 700;">
+              <span style="font-size: 2.25rem;"></span>
+              <span style="font-size: 2.25rem;">
                 <span style="font-weight: 400;">Entrance
 Doors</span>
                 <br>
@@ -368,14 +380,14 @@ tranquillity to your life.</span>
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel_ec44" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-8c6b" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel_ec44" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-8c6b" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
@@ -385,7 +397,7 @@ tranquillity to your life.</span>
     </section>
     <section class="u-clearfix u-section-4" id="carousel_6be5">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="Brochure.html" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-black u-radius u-btn-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction=""><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64    c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472    c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z"></path><path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"></path></svg></span>&nbsp;Download Our Product Brochures now
+        <a href="Brochure.html" class="infinite u-border-none u-btn u-button-style u-custom-color-6 u-hover-black u-radius u-btn-1" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction=""><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64    c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472    c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z"></path><path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"></path></svg></span>&nbsp;Download Our Product Brochures now
         </a>
       </div>
     </section>
@@ -453,7 +465,7 @@ tranquillity to your life.</span>
     </section>
     <section class="u-border-2 u-border-no-left u-border-no-right u-border-white u-clearfix u-custom-color-6 u-section-8" id="carousel_1dfd">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Why Choose EcoShield</h1>
+        <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Why Choose EcoShield?</h1>
       </div>
     </section>
     <section class="u-clearfix u-section-9" id="sec-b658">
@@ -461,26 +473,26 @@ tranquillity to your life.</span>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-1">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
                 <img class="u-image u-image-contain u-image-default u-image-1" src="images/Ecoshield-LogoFinal3.jpg" alt="" data-image-width="1754" data-image-height="1240">
-                <h4 class="u-align-center u-text u-text-default u-text-1">With over 25 Years experience, our passion, commitment and skill will deliver a first class experience!&nbsp;</h4>
+                <h4 class="u-align-center u-text u-text-default u-text-1">With over 25 Years experience, our passion, commitment, and skill will deliver a first-class experience!&nbsp;</h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
-              <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-2">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
                 <img class="u-image u-image-contain u-image-default u-image-2" src="images/10Yr-Ins-Bkd-Guarantee.png" alt="" data-image-width="289" data-image-height="400">
-                <h4 class="u-align-center u-text u-text-default u-text-2">All Ecoshield Installations are backed by a 10 Year Guarantee!</h4>
+                <h4 class="u-align-center u-text u-text-default u-text-2">All EcoShield installations are backed by a 10 Year Guarantee!</h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
-              <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-3">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
                 <img class="u-image u-image-contain u-image-default u-image-3" alt="" data-image-width="487" data-image-height="350" src="images/ENERGY-LABEL-PAGE-IMAGE-2-487x350-72DPI.jpg">
                 <h4 class="u-align-center u-text u-text-default u-text-3">All EcoShield Windows are A-Rated as standard<br>No compromise on energy performce!&nbsp;
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4">
-              <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xs u-container-layout-4">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
                 <img class="u-image u-image-contain u-image-default u-image-4" src="images/made-in-britain-logo-93322B9BF0-seeklogo.com.png" alt="" data-image-width="208" data-image-height="300">
                 <h4 class="u-align-center u-text u-text-default u-text-4"> We are proud to say all EcoShield products are made in Britain!</h4>
               </div>
