--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
 
   gtag('config', 'G-JRE50C2H7Q');
 </script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-home-page="EcoShield-Windows.html" data-home-page-title="EcoShield Windows" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -206,8 +204,8 @@
         <h2 class="u-align-center u-text u-text-default u-text-1"> Installers of High Security and Energy Efficient Windows, Doors &amp; Living Spaces<br>
         </h2><span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/3179068-cd7b04a1.png" alt=""></span>
         <h2 class="u-align-center u-text u-text-default u-text-2">South Wales</h2>
-        <div class="u-container-style u-expanded-width u-grey-10 u-group u-opacity u-opacity-60 u-group-1">
-          <div class="u-container-layout u-container-layout-1">
+        <div class="custom-expanded u-container-style u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-grey-10 u-group u-opacity u-opacity-60 u-group-1">
+          <div class="u-container-layout u-valign-middle-xs u-container-layout-1">
             <p class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-3">
               <span style="font-style: italic;">Using our 25 years’ experience working with windows and doors,
 and by setting the highest standards of quality for our products and services, EcoShield Windows is committed
@@ -231,14 +229,14 @@ to combining Value for Money with a First-Class experience for all our customer.
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">EcoShield Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-8c6b" data-interval="5000" data-u-ride="carousel">
+    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-b1b1" data-interval="8250" data-u-ride="false">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-3bc6-2">
-        <li data-u-target="#carousel-8c6b" class="u-active u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="3"></li>
-        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="4"></li>
-        <li data-u-target="#carousel-8c6b" class="u-grey-30" data-u-slide-to="5"></li>
+        <li data-u-target="#carousel-b1b1" class="u-active u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="4"></li>
+        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="5"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-section-3-1" src="">
@@ -380,14 +378,14 @@ tranquillity to your life.</span>
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-8c6b" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-b1b1" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-8c6b" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-b1b1" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
@@ -473,28 +471,40 @@ tranquillity to your life.</span>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img class="u-image u-image-contain u-image-default u-image-1" src="images/Ecoshield-LogoFinal3.jpg" alt="" data-image-width="1754" data-image-height="1240">
-                <h4 class="u-align-center u-text u-text-default u-text-1">With over 25 Years experience, our passion, commitment, and skill will deliver a first-class experience!&nbsp;</h4>
+                <h4 class="u-text u-text-1">With over 25 Years experience, our passion, commitment, and skill will deliver a first-class experience!&nbsp;</h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
+              <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img class="u-image u-image-contain u-image-default u-image-2" src="images/10Yr-Ins-Bkd-Guarantee.png" alt="" data-image-width="289" data-image-height="400">
-                <h4 class="u-align-center u-text u-text-default u-text-2">All EcoShield installations are backed by a 10 Year Guarantee!</h4>
+                <h4 class="u-text u-text-2">All EcoShield installations are backed by a 10 Year Guarantee!</h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
+              <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img class="u-image u-image-contain u-image-default u-image-3" alt="" data-image-width="487" data-image-height="350" src="images/ENERGY-LABEL-PAGE-IMAGE-2-487x350-72DPI.jpg">
-                <h4 class="u-align-center u-text u-text-default u-text-3">All EcoShield Windows are A-Rated as standard<br>No compromise on energy performce!&nbsp;
+                <h4 class="u-text u-text-3">All EcoShield Windows are A-Rated as standard<br>No compromise on energy performce!&nbsp;
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4">
-              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
+              <div class="u-container-layout u-similar-container u-container-layout-4">
                 <img class="u-image u-image-contain u-image-default u-image-4" src="images/made-in-britain-logo-93322B9BF0-seeklogo.com.png" alt="" data-image-width="208" data-image-height="300">
-                <h4 class="u-align-center u-text u-text-default u-text-4"> We are proud to say all EcoShield products are made in Britain!</h4>
+                <h4 class="u-text u-text-4"> We are proud to say all EcoShield products are made in Britain!</h4>
+              </div>
+            </div>
+            <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-5">
+              <div class="u-container-layout u-similar-container u-container-layout-5">
+                <img class="u-image u-image-contain u-image-default u-image-5" src="images/Friend.png" alt="" data-image-width="152" data-image-height="157">
+                <h4 class="u-text u-text-5">No ​aggressive sales pitch, ever! Just friendly advice.&nbsp;</h4>
+              </div>
+            </div>
+            <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-6">
+              <div class="u-container-layout u-similar-container u-container-layout-6">
+                <img class="u-image u-image-contain u-image-default u-image-6" src="images/30d28e8c5921ddb99aa3618260177e6c8e0f26ed095777e2750888d7ae318cb79d7717ee221c5ad20374e5e4d45a6bb8cc50e302ecc823308685a3_1280.png" alt="" data-image-width="1280" data-image-height="1280">
+                <h4 class="u-text u-text-6">Honest Pricing - We keep our prices as low as possible. Our first price is our final price.</h4>
               </div>
             </div>
           </div>
