--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ to combining Value for Money with a First-Class experience for all our customer.
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">EcoShield Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-b1b1" data-interval="8250" data-u-ride="false">
+    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-b1b1" data-interval="10000" data-u-ride="false">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-3bc6-2">
         <li data-u-target="#carousel-b1b1" class="u-active u-grey-30" data-u-slide-to="0"></li>
         <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="1"></li>
@@ -467,44 +467,55 @@ tranquillity to your life.</span>
       </div>
     </section>
     <section class="u-clearfix u-section-9" id="sec-b658">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img class="u-image u-image-contain u-image-default u-image-1" src="images/Ecoshield-LogoFinal3.jpg" alt="" data-image-width="1754" data-image-height="1240">
-                <h4 class="u-text u-text-1">With over 25 Years experience, our passion, commitment, and skill will deliver a first-class experience!&nbsp;</h4>
+                <h4 class="u-text u-text-1">With over 25 Years experience, our passion, commitment, and skill will deliver a first-class experience!&nbsp;<br>
+                  <br>
+                </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img class="u-image u-image-contain u-image-default u-image-2" src="images/10Yr-Ins-Bkd-Guarantee.png" alt="" data-image-width="289" data-image-height="400">
-                <h4 class="u-text u-text-2">All EcoShield installations are backed by a 10 Year Guarantee!</h4>
+                <h4 class="u-text u-text-2">All EcoShield installations are backed by a 10 Year Guarantee!<br>
+                  <br>
+                </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img class="u-image u-image-contain u-image-default u-image-3" alt="" data-image-width="487" data-image-height="350" src="images/ENERGY-LABEL-PAGE-IMAGE-2-487x350-72DPI.jpg">
-                <h4 class="u-text u-text-3">All EcoShield Windows are A-Rated as standard<br>No compromise on energy performce!&nbsp;
+                <h4 class="u-text u-text-3">All EcoShield Windows are A-Rated as standard<br>No compromise on energy performance!&nbsp;<br>
+                  <br>
+                  <br>
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <img class="u-image u-image-contain u-image-default u-image-4" src="images/made-in-britain-logo-93322B9BF0-seeklogo.com.png" alt="" data-image-width="208" data-image-height="300">
-                <h4 class="u-text u-text-4"> We are proud to say all EcoShield products are made in Britain!</h4>
+                <h4 class="u-text u-text-4"> We are proud to say all EcoShield products are made in Britain!<br>
+                  <br>
+                </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-5">
               <div class="u-container-layout u-similar-container u-container-layout-5">
                 <img class="u-image u-image-contain u-image-default u-image-5" src="images/Friend.png" alt="" data-image-width="152" data-image-height="157">
-                <h4 class="u-text u-text-5">No ​aggressive sales pitch, ever! Just friendly advice.&nbsp;</h4>
+                <h4 class="u-text u-text-5">No ​aggressive sales pitch, ever! Just friendly advice.<br>&nbsp;
+                </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-6">
               <div class="u-container-layout u-similar-container u-container-layout-6">
                 <img class="u-image u-image-contain u-image-default u-image-6" src="images/30d28e8c5921ddb99aa3618260177e6c8e0f26ed095777e2750888d7ae318cb79d7717ee221c5ad20374e5e4d45a6bb8cc50e302ecc823308685a3_1280.png" alt="" data-image-width="1280" data-image-height="1280">
-                <h4 class="u-text u-text-6">Honest Pricing - We keep our prices as low as possible. Our first price is our final price.</h4>
+                <h4 class="u-text u-text-6">Honest Pricing - We keep our prices as low as possible. Our first price is our final price.<br>
+                  <br>
+                </h4>
               </div>
             </div>
           </div>
