--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -133,6 +133,8 @@
 
   gtag('config', 'G-JRE50C2H7Q');
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -213,13 +215,13 @@ to combining Value for Money with a First-Class experience for all our customer.
             </p>
           </div>
         </div>
-        <div class="u-container-style u-custom-color-6 u-expanded-width u-group u-opacity u-opacity-20 u-group-2">
+        <div class="u-align-center u-container-style u-custom-color-6 u-expanded-width u-group u-opacity u-opacity-45 u-group-2">
           <div class="u-container-layout u-container-layout-2">
-            <h2 class="infinite u-align-center-xs u-text u-text-default u-text-4" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">Free Ring Doorbell worth £120<span style="font-size: 1.125rem;">*</span>
-            </h2>
-            <img class="u-image u-image-contain u-image-default u-image-1" src="images/CompositeDoors.png" alt="" data-image-width="1948" data-image-height="1115">
-            <p class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-5" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">With Every Composite Door purchased in February and March 2024</p>
-            <img class="infinite u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/rvdgen2_vb_2000x2000.webp" alt="" data-image-width="250" data-image-height="250" data-animation-name="pulse" data-animation-duration="10000" data-animation-direction="">
+            <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4" data-animation-name="bounceIn" data-animation-duration="2500" data-animation-direction="">
+              <span style="font-weight: 700; text-decoration: underline !important;">Sale Event</span>
+              <br>
+              <br>A Massive 20% off ALL Window, Door and Conservatories orders placed before 1st May 2024!
+            </h1>
           </div>
         </div>
       </div>
@@ -229,14 +231,14 @@ to combining Value for Money with a First-Class experience for all our customer.
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">EcoShield Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-b1b1" data-interval="10000" data-u-ride="false">
+    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-bd0d" data-interval="10000" data-u-ride="false">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-3bc6-2">
-        <li data-u-target="#carousel-b1b1" class="u-active u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="3"></li>
-        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="4"></li>
-        <li data-u-target="#carousel-b1b1" class="u-grey-30" data-u-slide-to="5"></li>
+        <li data-u-target="#carousel-bd0d" class="u-active u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#carousel-bd0d" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#carousel-bd0d" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#carousel-bd0d" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#carousel-bd0d" class="u-grey-30" data-u-slide-to="4"></li>
+        <li data-u-target="#carousel-bd0d" class="u-grey-30" data-u-slide-to="5"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-section-3-1" src="">
@@ -378,14 +380,14 @@ tranquillity to your life.</span>
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-b1b1" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-bd0d" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-b1b1" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-bd0d" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
