--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -427,7 +427,7 @@ tranquillity to your life.</span>
           <li>
             <div class="u-list-icon">
               <div>✔</div>
-            </div>Modern Living Spaces (Extensions/Conservatories
+            </div>Modern Living Spaces (Extensions/Conservatories)
           </li>
           <li>
             <div class="u-list-icon">
