--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -220,7 +220,7 @@ to combining Value for Money with a First-Class experience for all our customer.
             <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4" data-animation-name="bounceIn" data-animation-duration="2500" data-animation-direction="">
               <span style="font-weight: 700; text-decoration: underline !important;">Sale Event</span>
               <br>
-              <br>A Massive 20% off ALL Window, Door and Conservatory orders placed before 1st May 2024!
+              <br>A Massive <B>20% OFF</B> <U>ALL</U> Window, Door and Conservatory orders placed before 1st May 2024!
             </h1>
           </div>
         </div>
