--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -220,7 +220,11 @@ to combining Value for Money with a First-Class experience for all our customer.
             <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4" data-animation-name="bounceIn" data-animation-duration="2500" data-animation-direction="">
               <span style="font-weight: 700; text-decoration: underline !important;">Sale Event</span>
               <br>
-              <br>A Massive 20% off ALL Window, Door and Conservatory orders placed before 1st May 2024!
+              <br>A Massive <span style="font-weight: 700; text-decoration: underline !important;">20% off</span>
+              <span style="text-decoration: underline !important;"></span>
+              <span style="font-weight: 700;">
+                <span style="text-decoration: underline !important;">ALL</span>
+              </span>Window, Door and Conservatory orders placed before 1st May 2024!
             </h1>
           </div>
         </div>
@@ -427,7 +431,7 @@ tranquillity to your life.</span>
           <li>
             <div class="u-list-icon">
               <div>✔</div>
-            </div>Modern Living Spaces (Extensions/Conservatories)
+            </div>Modern Living Spaces (Extensions/Conservatories
           </li>
           <li>
             <div class="u-list-icon">
