--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -519,7 +519,7 @@ tranquillity to your life.</span>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-6">
               <div class="u-container-layout u-similar-container u-container-layout-6">
                 <img class="u-image u-image-contain u-image-default u-image-6" src="images/30d28e8c5921ddb99aa3618260177e6c8e0f26ed095777e2750888d7ae318cb79d7717ee221c5ad20374e5e4d45a6bb8cc50e302ecc823308685a3_1280.png" alt="" data-image-width="1280" data-image-height="1280">
-                <h4 class="u-text u-text-6">Honest Pricing - We keep our prices as low as possible. Our first price is our final price.<br>
+                <h4 class="u-text u-text-6">Honest Pricing - We keep our prices as low as possible. Our vast product offering allows us to work with all budgets.<br>
                   <br>
                 </h4>
               </div>
