--- a/About-Us.html
+++ b/About-Us.html
@@ -105,7 +105,9 @@
         </div>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-ab9d">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <a href="https://www.facebook.com/profile.php?id=61556774094652" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-1">Follow Us on Facebook</a>
+      </div>
     </section>
     
     
