--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -219,15 +219,15 @@ to combining Value for Money with a First-Class experience for all our customer.
         <img class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" src="images/computer-icons-facebook-blog-clip-art-follow-us-7148a429e8916363d62586e9a5812a5a.png" alt="" data-image-width="1200" data-image-height="630" data-href="https://www.facebook.com/profile.php?id=61556774094652">
       </div>
     </section>
-    <section class="u-clearfix u-section-2" id="sec-83fe">
+    <section class="u-clearfix u-gradient u-section-2" id="sec-83fe">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-custom-color-6 u-text-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Composite Door&nbsp;<br>Promotion
+        <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Composite Door&nbsp;<br>Promotion
         </h1>
         <img class="custom-expanded u-expanded-width-sm u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/Untitled-1.png" alt="" data-image-width="1080" data-image-height="1080">
       </div>
     </section>
     <section class="u-border-2 u-border-white u-clearfix u-custom-color-6 u-section-3" id="sec-2285">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">EcoShield Products</h1>
       </div>
     </section>
