--- a/Brochure.html
+++ b/Brochure.html
@@ -120,6 +120,9 @@
 </div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-3" data-image-width="599" data-image-height="856" data-href="https://drive.google.com/file/d/1H2fwvN_xev1sxdpre_36mFbrE0OxMWf1/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="601" data-image-height="850"><img class="u-back-image" src="images/Panel.png" alt="PVC Door Panels">
 </div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-3"><h3 class="u-align-center u-gallery-heading" style="">PVC Door Panels</h3>
 </div>
+</div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-4" data-image-width="682" data-image-height="681" data-href="https://drive.google.com/file/d/1Qjha3IzDF61cyTu6Oq-4Ux2MYKMqABC8/view?usp=sharing"><div class="u-back-slide"><img class="u-back-image" src="images/Screenshot2024-07-12010704.png" alt="Vertical Sliding Sash">
+</div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-4"><h3 class="u-align-center u-gallery-heading">Vertical Sliding Sash</h3>
+</div>
 </div></div>
           <a class="u-flip-horizontal u-gallery-nav u-gallery-nav-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1" href="#" role="button">
             <span aria-hidden="true">
