--- a/index.html
+++ b/index.html
@@ -221,24 +221,24 @@ to combining Value for Money with a First-Class experience for all our customer.
     </section>
     <section class="u-clearfix u-gradient u-section-2" id="sec-83fe">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Composite Door&nbsp;<br>Promotion
-        </h1>
-        <img class="custom-expanded u-expanded-width-sm u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/Untitled-1.png" alt="" data-image-width="1080" data-image-height="1080">
+        <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">Facebook Promotions</h1>
+        <img class="custom-expanded u-expanded-width-sm u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/Untitled-1.png" alt="" data-image-width="1080" data-image-height="1080" data-href="https://www.facebook.com/profile.php?id=61556774094652" data-target="_blank">
+        <img class="u-image u-image-default u-preserve-proportions u-image-2" alt="" data-image-width="1080" data-image-height="1080" data-href="https://www.facebook.com/profile.php?id=61556774094652" data-target="_blank" src="images/Untitled16.png">
       </div>
     </section>
     <section class="u-border-2 u-border-white u-clearfix u-custom-color-6 u-section-3" id="sec-2285">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-sheet-1">
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">EcoShield Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-4488" data-interval="10000" data-u-ride="false">
+    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-c4aa" data-interval="10000" data-u-ride="false">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-3bc6-2">
-        <li data-u-target="#carousel-4488" class="u-active u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel-4488" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel-4488" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel-4488" class="u-grey-30" data-u-slide-to="3"></li>
-        <li data-u-target="#carousel-4488" class="u-grey-30" data-u-slide-to="4"></li>
-        <li data-u-target="#carousel-4488" class="u-grey-30" data-u-slide-to="5"></li>
+        <li data-u-target="#carousel-c4aa" class="u-active u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#carousel-c4aa" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#carousel-c4aa" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#carousel-c4aa" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#carousel-c4aa" class="u-grey-30" data-u-slide-to="4"></li>
+        <li data-u-target="#carousel-c4aa" class="u-grey-30" data-u-slide-to="5"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-section-4-1" src="">
@@ -380,14 +380,14 @@ tranquillity to your life.</span>
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-4488" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-c4aa" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-4488" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-c4aa" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
@@ -580,7 +580,7 @@ tranquillity to your life.</span>
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-6 u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">01</h2>
                 <h5 class="u-align-center u-text u-text-2">Call - TEXT - Whatsapp</h5>
-                <p class="u-align-center u-text u-text-custom-color-6 u-text-3">0800 433 22 93&nbsp;<br>07440 015 114
+                <p class="u-align-center u-text u-text-custom-color-6 u-text-3">0800 433 22 93<br>07440 015 114
                 </p>
               </div>
             </div>
@@ -674,14 +674,14 @@ tranquillity to your life.</span>
             </div>
           </div>
         </div>
-        <div data-interval="5000" data-u-ride="carousel" class="u-carousel u-expanded-width u-slider u-slider-1" id="carousel-6c24">
+        <div data-interval="5000" data-u-ride="carousel" class="u-carousel u-expanded-width u-slider u-slider-1" id="carousel-3ff0">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-            <li data-u-target="#carousel-6c24" class="u-active u-active-grey-10 u-grey-30" data-u-slide-to="0"></li>
-            <li data-u-target="#carousel-6c24" class="u-active-grey-10 u-grey-30" data-u-slide-to="1"></li>
-            <li data-u-target="#carousel-6c24" class="u-active-grey-10 u-grey-30" data-u-slide-to="2"></li>
-            <li data-u-target="#carousel-6c24" class="u-active-grey-10 u-grey-30" data-u-slide-to="3"></li>
-            <li data-u-target="#carousel-6c24" class="u-active-grey-10 u-grey-30" data-u-slide-to="4"></li>
-            <li data-u-target="#carousel-6c24" class="u-active-grey-10 u-grey-30" data-u-slide-to="5"></li>
+            <li data-u-target="#carousel-3ff0" class="u-active u-active-grey-10 u-grey-30" data-u-slide-to="0"></li>
+            <li data-u-target="#carousel-3ff0" class="u-active-grey-10 u-grey-30" data-u-slide-to="1"></li>
+            <li data-u-target="#carousel-3ff0" class="u-active-grey-10 u-grey-30" data-u-slide-to="2"></li>
+            <li data-u-target="#carousel-3ff0" class="u-active-grey-10 u-grey-30" data-u-slide-to="3"></li>
+            <li data-u-target="#carousel-3ff0" class="u-active-grey-10 u-grey-30" data-u-slide-to="4"></li>
+            <li data-u-target="#carousel-3ff0" class="u-active-grey-10 u-grey-30" data-u-slide-to="5"></li>
           </ol>
           <div class="u-carousel-inner" role="listbox">
             <div class="u-active u-align-center u-carousel-item u-container-style u-slide">
@@ -727,14 +727,14 @@ tranquillity to your life.</span>
               </div>
             </div>
           </div>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-spacing-5 u-text-grey-30 u-carousel-control-1" href="#carousel-6c24" role="button" data-u-slide="prev">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-spacing-5 u-text-grey-30 u-carousel-control-1" href="#carousel-3ff0" role="button" data-u-slide="prev">
             <span aria-hidden="true">
               <svg viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
             </span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-spacing-5 u-text-grey-30 u-carousel-control-2" href="#carousel-6c24" role="button" data-u-slide="next">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-spacing-5 u-text-grey-30 u-carousel-control-2" href="#carousel-3ff0" role="button" data-u-slide="next">
             <span aria-hidden="true">
               <svg viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
