--- a/Contact-Form.html
+++ b/Contact-Form.html
@@ -163,6 +163,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-body-alt-color u-text-hover-black" href="Brochure.html" style="padding: 10px 4px 10px 20px;">EcoShield Brochures</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-body-alt-color u-text-hover-black" href="About-Us.html" style="padding: 10px 4px 10px 20px;">About Us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-body-alt-color u-text-hover-black" href="Contact-Form.html" style="padding: 10px 4px 10px 20px;">Get In Touch</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-body-alt-color u-text-hover-black" href="Gallery.html" style="padding: 10px 4px 10px 20px;">Gallery</a>
 </li></ul>
               </div>
               <div class="u-custom-menu u-nav-container-collapse">
@@ -173,6 +174,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Brochure.html">EcoShield Brochures</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-Us.html">About Us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact-Form.html">Get In Touch</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Gallery.html">Gallery</a>
 </li></ul>
                   </div>
                 </div>
