--- a/About-Us.html
+++ b/About-Us.html
@@ -107,9 +107,10 @@
         </div>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-ab9d">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center u-text u-text-default-xs u-text-1">To find out more about us, please follow us on Facebook.</p>
-        <a href="https://www.facebook.com/profile.php?id=61556774094652" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-1">Follow Us on Facebook</a>
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <p class="u-align-center u-text u-text-1">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" data-href="https://www.facebook.com/profile.php?id=61556774094652" data-target="_blank">To find out more about Graham and Philip - a.k.a EcoShield Windows, please follow our journey on Facebook. 😀😀</a>
+        </p>
       </div>
     </section>
     
@@ -122,10 +123,9 @@
           <br>Email:<br>info@ecoshieldwindows.co.uk
         </p>
         <div class="u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div>
-        <p class="u-text u-text-default u-text-white u-text-2">*Free Ring Doorbell Promotion (Feburary - March 2024) - We reserve the right to remove the promotion at any time. Doorbell ​installation and subscription not included. For doorbell installation fees, please speak to a member of our team. Doorbell will be transferd to bill payer once all works are completed and all payments have been recieved by us. This promotion carries no cash alternitive.&nbsp;</p>
-        <p class="u-align-center u-text u-text-3"> Registered Company England &amp; Wales<br>15433312
+        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>15433312
         </p>
-        <p class="u-align-center u-text u-text-4">Website ​Created By - Ecoshiled Windows 2024</p>
+        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2024</p>
       </div></footer>
   
 </body></html>
